name:                cpe
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/cpe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    CPE.Parser.CPE
    CPE.Parser.WFN

  build-depends:
    base >= 4.7 && < 5
    , attoparsec
    , bytestring
    , text

test-suite cpe-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    base >= 4.7 && < 5
    , attoparsec
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , cpe
